[project]
name = "fb-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "abdulrafay85", email = "rafaykhank982@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "passlib>=1.7.4",
]

[project.scripts]
fb-backend = "fb_backend:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
